Correct z-index of current scene

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -151,6 +151,10 @@ a {
   background-color: white;
 }
 
+.scene.is-current {
+  z-index: 5;
+}
+
 .scene-2 {
   background-image: url('http://farm3.staticflickr.com/2651/3735776628_fe1f49d53c_o.jpg');
 }
@@ -204,10 +208,10 @@ a {
 
 .story {
     clear: both;
-} 
+}
 .story-item {
     float: left;
-} 
+}
 
 .kicker {
     background-color: red;
